# ErgoBot_AI

./: README.md
arm_controller/: CMakeLists.txt  package.xml
arm_controller/include/arm_controller/: moverobotclass.hpp
arm_controller/launch/: arm_handler.launch.py
arm_controller/src/: holding_controller.cpp  move_ur5e_mz.cpp  moverobotclass.cpp
ergo_gui/: package.xml  setup.cfg  setup.py
ergo_gui/ergo_gui/: ergo_gui.py
llm_communicator/: setup.py
llm_communicator/llm_communicator/: cobot_llm.py
llm_communicator/resource/: robot_commands.txt
robot_interface/: package.xml
rula_assessment/: package.xml  setup.py
rula_assessment/rula_assessment/: angle_calc.py  app.py  check_setup.py  pose_landmarks.py  realsense_class.py
voice_command/voice_command/: voice_command_system.py
